Fixed ugly scrollbar bug

--- a/src/app/components/searchpopup/searchpopup.component.scss
+++ b/src/app/components/searchpopup/searchpopup.component.scss
@@ -37,7 +37,7 @@ textarea {
   resize: vertical;
   overflow-x: hidden;
   overflow-y: scroll;
-  min-height: 50px;
+  min-height: 100px;
   max-height: 100px;
 }
 
